adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,8 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam explicabo obcaecati enim consequuntur dolore libero minima corporis vel eveniet blanditiis optio quo, vitae placeat modi pariatur ipsum mollitia quibusdam quaerat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia fugit ipsa alias blanditiis illo error voluptatum aliquam enim. Quos at delectus, doloremque explicabo tempore consequatur! Eos excepturi illum impedit. Quod.
+        
+    </p>
 </body>
 </html>
